[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stopwatch = "0.0.7"
rand="0.3.14"
criterion = "0.3"

[[bench]]
name = "branch_benchmark"
harness = false
html_reports = true

